--- a/DjangoClass/project_1/core/templates/header.html
+++ b/DjangoClass/project_1/core/templates/header.html
@@ -3,8 +3,7 @@
     <div class="max-w-md">
       <h1 class="text-5xl font-bold">Hello there</h1>
       <p class="py-6">Add Student</p>
-
-      <button class="btn btn-primary" onclick="my_modal_5.showModal()">Get Started</button>
+      <a href="{% url 'add_student' %}" class="btn btn-outline btn-primary">Get Started</a>
     </div>
   </div>
 </div>
