added cit django-4

--- a/DjangoClass/project_1/core/templates/index.html
+++ b/DjangoClass/project_1/core/templates/index.html
@@ -1,13 +1,129 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Home
+  Add Student
 {% endblock %}
 
 {% block header %}
-  {% include 'header.html' %}
+
 {% endblock %}
 
 {% block main_content %}
+  {% if form.non_field_errors %}
+    {% for error in form.non_field_errors %}
+      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
+        <p class="font-bold">Error!</p>
+        <p class="block sm:inline">{{ error }}</p>
+      </div>
+    {% endfor %}
+  {% endif %} {% if form.non_field_errors %}
+    {% for error in form.non_field_errors %}
+      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
+        <p class="font-bold">Error!</p>
+        <p class="block sm:inline">{{ error }}</p>
+      </div>
+    {% endfor %}
+  {% endif %}
 
+  <div class="container mx-auto my-5">
+    {% if messages %}
+      {% for mess in messages %}
+        <div role="alert" class="alert alert-{{ mess.tag }}" style="width: 80%; margin: auto;">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          <span>{{ mess }}</span>
+        </div>
+      {% endfor %}
+    {% endif %}
+  </div>
+  <div class="md:container mx-auto my-10">
+    <h1 class="text-center">All Student List</h1>
+    <div class="container mx-auto">
+      <div class="grid grid-cols-12 gap-4">
+        {% for student in students %}
+          <div class="col-span-4">
+            <div class="card bg-base-100 w-60 shadow-xl">
+              <figure>
+                <img class="w-60 h-40" src="{{ student.student_img.url }}" alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="text-xl font-bold">{{ student.name }}</h2>
+                <h3 class="text-lg font-semibold">Roll: {{ student.roll }}</h3>
+                <h3 class="text-lg font-semibold">Department: {{ student.department }}</h3>
+                <p class="text-base">{{ student.student_bio }}</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Details</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <div class="hero bg-base-200 min-h-screen">
+    <div class="hero-content flex-col lg:flex-row">
+      <img src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp" class="max-w-sm rounded-lg shadow-2xl" />
+      <div>
+        <h1 class="text-5xl font-bold">Box Office News!</h1>
+        <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+        <button class="btn btn-primary">Get Started</button>
+      </div>
+    </div>
+  </div>
+
+  <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+    <div class="modal-box">
+      <div class="text text-center">
+        <h3 class="text-lg font-bold">Hello! @User</h3>
+        <p class="py-4">Please Added Student Information....</p>
+      </div>
+      <div class="modal-action">
+        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 space-y-3" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="w-full px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="{{ form.name.id_for_label }}">{{ form.name.label }}</label> {{ form.name }} {% if form.name.errors %}
+              {% for error in form.name.errors %}
+                <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+          <div class="w-full px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="{{ form.roll.id_for_label }}">{{ form.roll.label }}</label> {{ form.roll }} {% if form.roll.errors %}
+              {% for error in form.roll.errors %}
+                <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+          <div class="w-full px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="{{ form.department.id_for_label }}">{{ form.department.label }}</label> {{ form.department }} {% if form.department.errors %}
+              {% for error in form.department.errors %}
+                <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+          <div class="w-full px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="{{ form.student_bio.id_for_label }}">{{ form.student_bio.label }}</label> {{ form.student_bio }} {% if form.student_bio.errors %}
+              {% for error in form.student_bio.errors %}
+                <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+          <div class="w-full px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="{{ form.student_img.id_for_label }}">{{ form.student_img.label }}</label> {{ form.student_img }} {% if form.student_img.errors %}
+              {% for error in form.student_img.errors %}
+                <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+
+          <div class="flex justify-end items-center">
+            <button class="btn btn-outline btn-primary" type="submit">Submit</button>
+            <button class="btn">Close</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </dialog>
 {% endblock %}
