--- a/SMS/school_management_system/core/templates/index.html
+++ b/SMS/school_management_system/core/templates/index.html
@@ -7,15 +7,15 @@
         <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
       </div>
       <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-        <form class="card-body">
+        <form class="card-body" method="POST">
+          {% csrf_token %}
           <div class="form-control">
-            <label class="label"><span class="label-text">Email</span></label>
-            <input type="email" placeholder="email" class="input input-bordered" required />
+            <label class="label"><span class="label-text">Username</span></label>
+            <input type="text" name="username" placeholder="example@username" class="input input-bordered" required />
           </div>
           <div class="form-control">
             <label class="label"><span class="label-text">Password</span></label>
-            <input type="password" placeholder="password" class="input input-bordered" required />
-            <label class="label"><a href="#" class="label-text-alt link link-hover">Forgot password?</a></label>
+            <input type="password" name="password" placeholder="password" class="input input-bordered" required />
           </div>
           <div class="form-control mt-6">
             <button class="btn btn-primary">Login</button>
