--- a/SMS/school_management_system/student/templates/student_register.html
+++ b/SMS/school_management_system/student/templates/student_register.html
@@ -2,36 +2,62 @@
 {% load static %}
 
 {% block main_content %}
-  <div class="container mx-auto">
+  <div class="container mx-auto my-10">
+    {% if messages %}
+      {% for message in messages %}
+        <div role="alert" class="my-10 alert alert-{{ message.tag }}">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+          </svg>
+          <span>Warning: {{ message }}</span>
+        </div>
+      {% endfor %}
+    {% endif %}
     <div class="flex items-center border p-10 bg-gray-500 rounded-xl">
       <div class="w-1/2">
         <img src="{% static 'web/register.svg' %}" alt="" />
       </div>
       <div class="bg-gray-50 w-1/2 rounded-xl h-full">
-        <form class="card-body">
-          <div class="form-control">
-            <label class="label"><span class="label-text">Email</span></label>
-            <input type="email" placeholder="email" class="input input-bordered" required />
+        <form class="card-body" method="POST">
+          {% csrf_token %}
+          <div class="flex gap-5">
+            <div class="form-control w-1/2">
+              <label class="label"><span class="label-text">First Name</span></label>
+              <input type="text" name="first_name" placeholder="example@_Saiyedul" class="input input-bordered" required />
+            </div>
+            <div class="form-control w-1/2">
+              <label class="label"><span class="label-text">Last Name</span></label>
+              <input type="text" name="last_name" placeholder="example@_Morsalin" class="input input-bordered" required />
+            </div>
           </div>
-          <div class="form-control">
-            <label class="label"><span class="label-text">Email</span></label>
-            <input type="email" placeholder="email" class="input input-bordered" required />
+          <div class="flex gap-5">
+            <div class="form-control w-1/2">
+              <label class="label"><span class="label-text">Username</span></label>
+              <input type="text" name="username" placeholder="example@username" class="input input-bordered" required />
+            </div>
+            <div class="form-control w-1/2">
+              <label class="label"><span class="label-text">PassKey</span></label>
+              <input type="text" name="pass_key" placeholder="PassKey@13548" class="input input-bordered" required />
+            </div>
           </div>
+
           <div class="form-control">
             <label class="label"><span class="label-text">Email</span></label>
-            <input type="email" placeholder="email" class="input input-bordered" required />
+            <input type="email" name="student_email" placeholder="example@email.com" class="input input-bordered" required />
           </div>
-          <div class="form-control">
-            <label class="label"><span class="label-text">Email</span></label>
-            <input type="email" placeholder="email" class="input input-bordered" required />
-          </div>
-          <div class="form-control">
-            <label class="label"><span class="label-text">Email</span></label>
-            <input type="email" placeholder="email" class="input input-bordered" required />
+          <div class="flex gap-5">
+            <div class="form-control w-1/2">
+              <label class="label"><span class="label-text">Password</span></label>
+              <input type="password" name="password1" placeholder="********" class="input input-bordered" required />
+            </div>
+            <div class="form-control w-1/2">
+              <label class="label"><span class="label-text">Confirm Password</span></label>
+              <input type="password" name="password2" placeholder="********" class="input input-bordered" required />
+            </div>
           </div>
 
           <div class="form-control mt-6">
-            <button class="btn" style="background-color: #00D27C;">Login</button>
+            <button class="btn" style="background-color: #00D27C;">Register</button>
           </div>
         </form>
       </div>
