--- a/SMS/school_management_system/core/templates/navbar.html
+++ b/SMS/school_management_system/core/templates/navbar.html
@@ -13,7 +13,7 @@
           </div>
           <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
             <li>
-              <a class="justify-between">
+              <a href="{% url 'student_profile' %}" class="justify-between">
                 Profile
                 <span class="badge">New</span>
               </a>
